	  hardware, reconfiguring the PLL while executing out of NOR FLASH causes
	  crashes.  This was fixed by David Sidrane by implementing RAM functions.
	  The killer code is copied and executed from ISRAM and the crash is
	  avoided (2014-4-3).
	* configs/sama5d3-xplained/Kconfig and include/board*.h;
	  configs/sama5d3x-ek/Kconfig and include/board*.h:  Add support for
	  528MHz CPU clock (2014-4-3).
	* arch/arm/src/sama5/Make.defs:  Fix a build error that occurs when
	  only USB device tracing is enabled (2014-4-4).
	* Documentation/UsbTrace.html:  Add some discussion of the USB monitor
	  (2014-4-4).
	* nuttx/arch/arm/src/armv7-a/mmu.h:  Bufferable bit did not do what
	  I thought it was going to do.  Result was the NOR FLASH accesses
	  were very slow (2014-4-3).
	* arch/arm/src/sama5/sam_udphs.c:  Fix a case where received status
	  was not clear, causing OUT SETUP commands to fail (2014-4-6).
	* arch/arm/src/tiva/tiva_syscontrol.c:  Add logic for TM4C125GXL based
	  on logic from Daniel Carvalho with modifications.  I think the
	  LM4F120 may have broken before as well(?).  In any event, the LM4F120
	  also works well with this chanage (2014-4-7).
	* Back out part of 610e2aa0c224e2936fe8009ef4a2351ce607067a: Need to
	  be able to select USB console devices when there is no /dev/console
	  enabled. Noted by Librae (2014-4-8).
	* configs/*/defconfig:  Increase the number of preallocated watchdogs
	  in all configurations that use networking or USB (2014-3-9).
	* include/nuttx/syslog/syslog.h and ramlog.h:  Move syslog.h and
	  ramlog.h to include/nutt/syslog (2014-4-10).
	* sched/errno_getptr.c and getpid.c:  Add some checks.  If these
	  functions are called early in initialization before the tasking
	  structures are initialized, they will not behavr properly
	  (2014-4-10).
	* arch/arm/src/sama5/sam_twi.c: TWI data sending is fails to increment
	  the number of byes transferred on first byte sent.  from David Sidrane
	  (2014-4-10).
